# my-soc-ops-python

./: README.md  pyproject.toml  run_ruff_check.py
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: api-agent.agent.md  game-logic-agent.agent.md
.github/instructions/: game-logic.instructions.md
.github/prompts/: plan-redesignSocOpsUiToCorporateCleanBlueProfessionalTheme.prompt.md
app/: data.py  game_logic.py  game_service.py  main.py  models.py
app/static/css/: app.css
app/templates/: base.html
app/templates/components/: bingo_board.html  bingo_modal.html  game_screen.html  start_screen.html
tests/: test_api.py  test_game_logic.py
